src/test/deca/context/invalid/Obj/decl-class-float.deca
// Description:
//    Déclaration d'une classe float
//
// Résultat:
//Une autre classe du même nom a déjà été définie
//
class float {}
{}